# cpp-labs

lab1/: .gitignore  CMakeLists.txt  lhsnode.cpp  lhstest.cpp  linkedhashset.cpp  linkedhashset.h  linkedhashset.hpp  main.cpp  student.cpp  student.hpp
lab2/: .gitignore  CMakeLists.txt  command.cpp  commands.cpp  commands.hpp  context.hpp  datastack.cpp  datastack.hpp  interpreter.cpp  interpreter.hpp  interpreter_error.hpp  interpreter_test.cpp  main.cpp
